// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton checked should match snapshot 1`] = `
.c3 {
  display: block;
  padding-left: 20px;
  box-sizing: border-box;
}

.c4 {
  margin: 0;
  color: #493C3F;
  display: block;
  font-size: 16px;
  line-height: 1.2;
  font-family: Montserrat;
}

.c5 {
  margin: 0;
  color: #7D666C;
  font-size: 12px;
  line-height: 1.2;
  font-family: Montserrat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 20px;
  padding-left: 20px;
  box-shadow: 0px 1px 2px rgba(0,0,0,0.06),0px 1px 3px rgba(0,0,0,0.1);
  border: 2px solid #E6DFE1;
  border-radius: 8px;
  width: 100%;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: 100ms border-color ease-in-out;
  transition: 100ms border-color ease-in-out;
}

.c0:focus-within {
  border-color: #DA4167;
}

.c2 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 4px solid #493C3F;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:after {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: #493C3F;
  border-radius: 100%;
}

.c1 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  z-index: -1;
}

<div>
  <label
    class="c0"
    display="flex"
    width="100%"
  >
    <input
      checked=""
      class="c1"
      name="test"
      type="radio"
      value="test"
    />
    <div
      class="c2"
    />
    <span
      class="c3"
      display="block"
    >
      <span
        class="c4"
        color="grey900"
        display="block"
      >
        Et occaecat aliquip
      </span>
      <span
        class="c5"
        color="grey800"
      >
        Elit in fugiat minim do
      </span>
    </span>
  </label>
</div>
`;

exports[`RadioButton not checked should match snapshot 1`] = `
.c3 {
  display: block;
  padding-left: 20px;
  box-sizing: border-box;
}

.c4 {
  margin: 0;
  color: #493C3F;
  display: block;
  font-size: 16px;
  line-height: 1.2;
  font-family: Montserrat;
}

.c5 {
  margin: 0;
  color: #7D666C;
  font-size: 12px;
  line-height: 1.2;
  font-family: Montserrat;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 20px;
  padding-left: 20px;
  box-shadow: 0px 1px 2px rgba(0,0,0,0.06),0px 1px 3px rgba(0,0,0,0.1);
  border: 2px solid #E6DFE1;
  border-radius: 8px;
  width: 100%;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: 100ms border-color ease-in-out;
  transition: 100ms border-color ease-in-out;
}

.c0:focus-within {
  border-color: #DA4167;
}

.c2 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 4px solid #493C3F;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:after {
  content: '';
  display: none;
  width: 12px;
  height: 12px;
  background-color: #493C3F;
  border-radius: 100%;
}

.c1 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  z-index: -1;
}

<div>
  <label
    class="c0"
    display="flex"
    width="100%"
  >
    <input
      class="c1"
      name="test"
      type="radio"
      value="test"
    />
    <div
      class="c2"
    />
    <span
      class="c3"
      display="block"
    >
      <span
        class="c4"
        color="grey900"
        display="block"
      >
        Et occaecat aliquip
      </span>
      <span
        class="c5"
        color="grey800"
      >
        Elit in fugiat minim do
      </span>
    </span>
  </label>
</div>
`;
